--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 /bootstrap/ssr
 /node_modules
 #/public/build
-/public/hot
-/public/storage
+
+#/public/hot
+#/public/storage
 /storage/*.key
 /storage/pail
 /vendor
