--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
         "moment": "^2.30.1",
         "next-themes": "^0.4.6",
         "react": "^19.0.0",
-        "react-day-picker": "8.10.1",
+        "react-day-picker": "^9.11.1",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.56.4",
         "react-resizable-panels": "^3.0.2",
