--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 /.phpunit.cache
 /bootstrap/ssr
 /node_modules
-#/public/build
+/public/build
 docker
-#/public/hot
+/public/hot
 /public/storage
 /storage/*.key
 /storage/pail
