--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "laravellegends/pt-br-validator": "^12.0",
+        "masbug/flysystem-google-drive-ext": "^2.4",
+        "spatie/laravel-backup": "^9.3",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
