--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
 /.phpunit.cache
 /bootstrap/ssr
-/node_modules
-#/public/build
 docker
-/public/hot
-/public/storage
-/storage/*.key
 /storage/pail
-/vendor
 .env
 .env.backup
 .env.production
@@ -15,7 +9,6 @@ docker
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
-npm-debug.log
 yarn-error.log
 /auth.json
 /.fleet
@@ -25,4 +18,19 @@ yarn-error.log
 /.zed
 vite.config.ts
 compose.yaml
-#composer.lock
+/vendor/
+/node_modules/
+/public/build/
+/public/hot
+/public/storage
+/storage/*.key
+/storage/app
+/storage/framework
+/storage/logs
+npm-debug.log
+yarn-debug.log*
+yarn-error.log*
+.env
+.env.backup
+.env.local
+.env.development
