--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
         "react-hook-form": "^7.56.4",
         "react-resizable-panels": "^3.0.2",
         "react-select": "^5.10.1",
+        "react-to-print": "^3.2.0",
         "recharts": "^2.15.3",
         "sonner": "^2.0.4",
         "tailwind-merge": "^3.3.1",
